--- a/app/src/main/res/layout/fragment_focus.xml
+++ b/app/src/main/res/layout/fragment_focus.xml
@@ -148,7 +148,7 @@
         <Button
             android:id="@+id/start_focus_button"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/button_height"
+            android:layout_height="@dimen/button_height_medium"
             android:layout_marginBottom="@dimen/spacing_large"
             android:background="@drawable/zen_button_primary_background"
             android:text="▶ Iniciar Foco"
