--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Ranking"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorAccentLight"
                 android:textSize="@dimen/text_size_xxlarge"
                 android:textStyle="bold" />
 
@@ -207,7 +207,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="7 dias ✓"
-                        android:textColor="@color/colorAccent"
+                        android:textColor="@color/colorAccentLight"
                         android:textSize="@dimen/text_size_small"
                         android:textStyle="bold" />
 
